--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".Admin.newComune"></activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".Admin.Comuni" />
         <activity android:name=".Admin.Utenti" />
         <activity android:name=".Comune.Messaggi" />
